@@ -2,6 +2,7 @@
 #define __DAEMON_H
 
 #include <sys/types.h>
+#include <stdbool.h>
 
 struct daemon_info {
     char* di_path;
@@ -12,6 +13,7 @@ struct daemon_info {
     pid_t di_pid;
 };
 
+extern bool daemonize(void);
 extern int daemon_init(struct daemon_info*, char*, ...);
 extern int daemon_addparam(struct daemon_info*, const char*);
 extern void daemon_free(struct daemon_info*);
