@@ -12,8 +12,10 @@ chaosvpn (2.01-0) unstable; urgency=low
   * Renamed config option "-a" to "-o" for 'oneshot mode' - describes
     better what it is really doing.
   * Renamed config option "-f" to "-r" for 'keep running'.
+  * New commandline option "-d" for a real daemon mode with forking into
+    the background.
 
- -- Sven-Haegar Koch <haegar@sdinet.de>  Wed, 13 Oct 2010 22:16:17 +0200
+ -- Sven-Haegar Koch <haegar@sdinet.de>  Wed, 13 Oct 2010 23:03:41 +0200
 
 chaosvpn (2.0-0) unstable; urgency=low
 
